[gd_scene load_steps=39 format=3 uid="uid://brdme6yp1gnj2"]

[ext_resource type="Script" path="res://player.gd" id="1_d53a7"]
[ext_resource type="Texture2D" uid="uid://d00tji1jq0mt4" path="res://Assets/kenney_roguelike-rpg-pack/Spritesheet/BoatBack.png" id="2_xgs83"]
[ext_resource type="Texture2D" uid="uid://cj4mte32sktya" path="res://Assets/kenney_roguelike-rpg-pack/Spritesheet/BoatFront.png" id="3_22ddu"]
[ext_resource type="Texture2D" uid="uid://dxaofov555emw" path="res://Assets/GameDevMarketBundle/over-80-rpg-characters-w-animations/timefantasy_characters/frames/chara/chara2_3/pose1.png" id="4_4hubh"]
[ext_resource type="Texture2D" uid="uid://bhg2ayooyfler" path="res://Assets/GameDevMarketBundle/over-80-rpg-characters-w-animations/timefantasy_characters/frames/chara/chara2_3/pose2.png" id="5_n425y"]
[ext_resource type="Texture2D" uid="uid://ck4ujbngfnnji" path="res://Assets/GameDevMarketBundle/over-80-rpg-characters-w-animations/timefantasy_characters/frames/chara/chara2_3/pose3.png" id="6_cm7dp"]
[ext_resource type="Texture2D" uid="uid://c3j7esywv47yl" path="res://Assets/Peasant/peasant_walk_001.png" id="15_ixgwo"]
[ext_resource type="PackedScene" uid="uid://d2jn48bn4d3l1" path="res://fantasy_characters_animated_sprite.tscn" id="15_lm1hf"]
[ext_resource type="Texture2D" uid="uid://dca6l3husbsev" path="res://Assets/Peasant/peasant_walk_002.png" id="16_lekt5"]
[ext_resource type="Texture2D" uid="uid://3fkvhc1q0r6k" path="res://Assets/Peasant/peasant_walk_003.png" id="17_fjl34"]
[ext_resource type="Texture2D" uid="uid://cpwhde5kc7rex" path="res://Assets/Peasant/peasant_walk_004.png" id="18_xrdp0"]
[ext_resource type="Texture2D" uid="uid://dd4qrvro60rpo" path="res://Assets/GameDevMarketBundle/rpg-ui-pack/UI assets (3x).png" id="19_6l004"]
[ext_resource type="Texture2D" uid="uid://c1tvs8q3o5qrg" path="res://Assets/Peasant/peasant_walk_005.png" id="19_11wgd"]
[ext_resource type="Script" path="res://help_focus.gd" id="19_i1j0r"]
[ext_resource type="Texture2D" uid="uid://4n4ybvs57qpq" path="res://Assets/Peasant/peasant_walk_006.png" id="20_p2ii3"]
[ext_resource type="Texture2D" uid="uid://dhpv6ubxbavib" path="res://Assets/items/empty_hand.png" id="21_3mwb5"]
[ext_resource type="Texture2D" uid="uid://byi0t84ypn7bm" path="res://Assets/Peasant/peasant_walk_007.png" id="21_yqhi3"]
[ext_resource type="Texture2D" uid="uid://bn4aie364405q" path="res://Assets/Peasant/peasant_walk_008.png" id="22_64yv0"]
[ext_resource type="Script" path="res://debug_menu.gd" id="40_a6e3t"]
[ext_resource type="Script" path="res://item_slash_area_2d.gd" id="40_y7p1n"]
[ext_resource type="Script" path="res://v_box_container.gd" id="42_bomsu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lyp5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4hubh")
}, {
"duration": 1.0,
"texture": ExtResource("5_n425y")
}, {
"duration": 1.0,
"texture": ExtResource("6_cm7dp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ixgwo")
}, {
"duration": 1.0,
"texture": ExtResource("16_lekt5")
}, {
"duration": 1.0,
"texture": ExtResource("17_fjl34")
}, {
"duration": 1.0,
"texture": ExtResource("18_xrdp0")
}, {
"duration": 1.0,
"texture": ExtResource("19_11wgd")
}, {
"duration": 1.0,
"texture": ExtResource("20_p2ii3")
}, {
"duration": 1.0,
"texture": ExtResource("21_yqhi3")
}, {
"duration": 1.0,
"texture": ExtResource("22_64yv0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7xdx"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xvdm"]
size = Vector2(2, 20)

[sub_resource type="LabelSettings" id="LabelSettings_nmcjf"]
font_size = 30
font_color = Color(1, 0, 0, 1)
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_tupri"]
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_u1tyq"]
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_qv8e8"]
font_size = 124

[sub_resource type="LabelSettings" id="LabelSettings_p07ap"]
font_color = Color(1, 0.858824, 0.266667, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vo43n"]
font_size = 11
font_color = Color(0.913097, 0.9051, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7dt6n"]
font_size = 20

[sub_resource type="AtlasTexture" id="AtlasTexture_fhwrr"]
atlas = ExtResource("19_6l004")
region = Rect2(9, 825, 27, 33)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5qn0o"]
load_path = "res://.godot/imported/UI assets (3x).png-e37ac9553625c292f3337eaa7ba55448.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1idq7"]
atlas = SubResource("CompressedTexture2D_5qn0o")
region = Rect2(105, 828, 27, 30)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eceh0"]
load_path = "res://.godot/imported/UI assets (3x).png-e37ac9553625c292f3337eaa7ba55448.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_0u700"]
atlas = SubResource("CompressedTexture2D_eceh0")
region = Rect2(153, 825, 27, 33)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3bm87"]
load_path = "res://.godot/imported/UI assets (3x).png-e37ac9553625c292f3337eaa7ba55448.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_uouy8"]
atlas = SubResource("CompressedTexture2D_3bm87")
region = Rect2(249, 828, 27, 30)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_d53a7")

[node name="Boat" type="Node2D" parent="."]
visible = false
position = Vector2(1, 4)

[node name="BoatSprite" type="Sprite2D" parent="Boat"]
texture = ExtResource("2_xgs83")

[node name="BoatFront" type="Sprite2D" parent="Boat"]
z_index = 1
texture = ExtResource("3_22ddu")

[node name="FantasyCharactersAnimatedSprite" parent="." instance=ExtResource("15_lm1hf")]
scale = Vector2(0.5, 0.5)
chara_no2 = 3

[node name="oldAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -11)
scale = Vector2(0.55, 0.55)
sprite_frames = SubResource("SpriteFrames_lyp5n")
animation = &"walk"
centered = false
offset = Vector2(-8, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q7xdx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="ItemSlashArea2D" type="Area2D" parent="."]
visible = false
script = ExtResource("40_y7p1n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemSlashArea2D"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_6xvdm")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="ItemSlashArea2D"]
position = Vector2(0, -17)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LiveHitShow" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerNameLabel" type="Label" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -43.5
offset_right = 88.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
text = "Jean-Jacques Rousseau"

[node name="InUI" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LiveLabel" type="Label" parent="CanvasLayer/UI/InUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 17.0
offset_right = -15.0
offset_bottom = 55.0
grow_horizontal = 0
text = "x/x vies"
label_settings = SubResource("LabelSettings_nmcjf")

[node name="Inventory" type="Panel" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -240.0
offset_right = 350.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
text = "Inventaire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Armor&CraftTable" type="HBoxContainer" parent="CanvasLayer/UI/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.2

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UI/Inventory/VBoxContainer"]
layout_mode = 2

[node name="InventorySlots" type="ItemList" parent="CanvasLayer/UI/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.6
theme_override_font_sizes/font_size = 10
allow_rmb_select = true
text_overrun_behavior = 4
max_columns = 8
same_column_width = true
fixed_column_width = 70
icon_mode = 0
fixed_icon_size = Vector2i(70, 70)

[node name="ChangeMap" type="Panel" parent="CanvasLayer/UI"]
visible = false
self_modulate = Color(1, 1, 1, 0.584314)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -299.0
offset_right = 284.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/ChangeMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/ChangeMap/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3
text = "Voulez vous partir d'ici?"
label_settings = SubResource("LabelSettings_tupri")
horizontal_alignment = 1
autowrap_mode = 3

[node name="AcceptChangeButton" type="Button" parent="CanvasLayer/UI/ChangeMap/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Accepter"

[node name="Label2" type="Label" parent="CanvasLayer/UI/ChangeMap/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "(Déplacer vous pour annuler)"
horizontal_alignment = 1

[node name="Proposition" type="Panel" parent="CanvasLayer/UI"]
visible = false
self_modulate = Color(1, 1, 1, 0.584314)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -299.0
offset_right = 284.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Proposition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Proposition/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3
text = "Voulez vous dormir"
label_settings = SubResource("LabelSettings_tupri")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Accept" type="Button" parent="CanvasLayer/UI/Proposition/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Accepter"

[node name="Refuse" type="Button" parent="CanvasLayer/UI/Proposition/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Refuser"

[node name="DebugMenu" type="Panel" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("40_a6e3t")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/DebugMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Menu de debugging"
label_settings = SubResource("LabelSettings_u1tyq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitButton" type="Button" parent="CanvasLayer/UI/DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Retirer une vie
"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/DebugMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ajouter un item à l'inventaire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ajouter"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/UI/DebugMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retirer un item de l'inventaire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="RemItemButton" type="Button" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retirer"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/UI/DebugMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ajouter un item à l'inventaire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="ParticleButton" type="Button" parent="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ajouter"

[node name="CompetenceMenu" type="Panel" parent="CanvasLayer/UI"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "UniRPG"
label_settings = SubResource("LabelSettings_qv8e8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentMission" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
grow_vertical = 2
alignment = 1

[node name="CurrentMissionTitle" type="Label" parent="CanvasLayer/UI/CurrentMission"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Allez voir le maire"
label_settings = SubResource("LabelSettings_p07ap")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CurrentMissionDescription" type="Label" parent="CanvasLayer/UI/CurrentMission"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Il se situe dans la ville"
label_settings = SubResource("LabelSettings_vo43n")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HelpMenu" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("42_bomsu")

[node name="Label" type="Label" parent="CanvasLayer/UI/HelpMenu"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Aide commandes de jeu:"
label_settings = SubResource("LabelSettings_7dt6n")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/UI/HelpMenu"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2

[node name="HelpFocus" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -81.0
offset_right = -54.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("19_i1j0r")

[node name="SelectTexture" type="TextureRect" parent="CanvasLayer/UI/HelpFocus"]
layout_mode = 2
texture = SubResource("AtlasTexture_fhwrr")

[node name="SelectTexturePressed" type="TextureRect" parent="CanvasLayer/UI/HelpFocus"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_1idq7")

[node name="SelectLabel" type="Label" parent="CanvasLayer/UI/HelpFocus"]
layout_mode = 2
size_flags_vertical = 1
text = "Sélectionner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelTexture" type="TextureRect" parent="CanvasLayer/UI/HelpFocus"]
layout_mode = 2
texture = SubResource("AtlasTexture_0u700")

[node name="CancelTexturePressed" type="TextureRect" parent="CanvasLayer/UI/HelpFocus"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_uouy8")

[node name="CancelLabel" type="Label" parent="CanvasLayer/UI/HelpFocus"]
layout_mode = 2
size_flags_vertical = 1
text = "Annuler"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentEquiped" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -181.0
offset_right = 180.0
offset_bottom = -45.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/CurrentEquiped"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.4
texture = ExtResource("21_3mwb5")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/UI/CurrentEquiped"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 3.8
text = "Empty Hand"
horizontal_alignment = 1

[connection signal="animation_finished" from="oldAnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="item_activated" from="CanvasLayer/UI/Inventory/VBoxContainer/InventorySlots" to="." method="_on_inventory_slots_item_activated"]
[connection signal="pressed" from="CanvasLayer/UI/ChangeMap/VBoxContainer/AcceptChangeButton" to="." method="_on_accept_change_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Proposition/VBoxContainer/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Proposition/VBoxContainer/Refuse" to="." method="_on_refuse_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/DebugMenu/VBoxContainer/HitButton" to="CanvasLayer/UI/DebugMenu" method="_on_hit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer/Button" to="CanvasLayer/UI/DebugMenu" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer2/RemItemButton" to="CanvasLayer/UI/DebugMenu" method="_on_rem_item_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/DebugMenu/VBoxContainer/HBoxContainer3/ParticleButton" to="CanvasLayer/UI/DebugMenu" method="_on_particle_button_pressed"]
